--- a/index.html
+++ b/index.html
@@ -86,5 +86,48 @@
 <div class="bg-muted">
     This is a muted background.
 </div><hr>
+<!-- BS Grids -->
+<!-- col-sm-6 -->
+<h1>BS Grids..!</h1><hr>
+<div class="row">
+    <div class="col-sm-6">column-1 <br>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa animi repellat voluptate inventore dolor est ullam tenetur facere nesciunt, iusto corporis nobis eaque culpa minus eveniet odit veniam obcaecati nemo.</p>
+    </div>
+    <div class="col-sm-6">column-2 <br>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa animi repellat voluptate inventore dolor est ullam tenetur facere nesciunt, iusto corporis nobis eaque culpa minus eveniet odit veniam obcaecati nemo.</p>
+    </div>
+</div><hr>
+<!-- create col-sm-4(12) -->
+<div class="row">
+    <div class="col-sm-4">column number 1 <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, recusandae eveniet eos nesciunt asperiores enim assumenda porro doloremque ipsum fugit neque obcaecati alias, hic laudantium, et vitae? Molestias, architecto nesciunt!</p> </div>
+    <div class="col-sm-4">column number 1 <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, recusandae eveniet eos nesciunt asperiores enim assumenda porro doloremque ipsum fugit neque obcaecati alias, hic laudantium, et vitae? Molestias, architecto nesciunt!</p> </div>
+    <div class="col-sm-4">column number 1 <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, recusandae eveniet eos nesciunt asperiores enim assumenda porro doloremque ipsum fugit neque obcaecati alias, hic laudantium, et vitae? Molestias, architecto nesciunt!</p> </div>
+   
+</div><hr>
+
+    <!-- col-sm-3 -->
+    <div class="row">
+        <div class="col-sm-3">coloumn-1 
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
+        </div>
+        <div class="col-sm-3">coloumn-2 
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
+        </div>
+        <div class="col-sm-3">coloumn-3 
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
+        </div>
+        <div class="col-sm-3">coloumn-4 
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
+        </div>
+    </div><hr>
+    <!-- unequal grids -->
+    <div class="row">
+        <div class="col-sm-4">column -1 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae praesentium illum incidunt delectus a dolorem officiis expedita id eius, vel doloribus vitae similique! Illum mollitia quam fugit enim vero eveniet.</p></div>
+        <div class="col-8"> coloumn- 2 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam minima libero exercitationem id et illum, tenetur deleniti velit alias excepturi culpa! Sed ipsa iure quisquam dignissimos sint! Enim, pariatur iste!</p></div>
+    </div>
+</div>
 </body>
 </html>
