--- a/index.html
+++ b/index.html
@@ -7,127 +7,261 @@
 
     <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- css file link -->
+      <!-- css file link -->
     <link rel="stylesheet" href="style.css">
     <title>Bootstrap Practice</title>
 </head>
 <body>
-    <!-- CONTAINER CLASS IN BS! -->
-    <!-- container -->
-    <h1>BS Containers..!</h1><br>
+            <!-- CONTAINER CLASS IN BS! -->
+            <!-- container -->
+            <h1>BS Containers..!</h1><br>
 
-    <div class="container" >
-        Welcome to bootstrap!
-    </div><br>
-    <!-- container-fluid -->
-    <div class="container-fluid">
-        <p>Today we gonna learn about bootstarp classes.</p>
-    </div><br>
-    <!-- container-small -->
-    <div class="container-sm">
-        This is a bootstrap class with a small container.
-    </div><br>
-    <!-- container-medium -->
-    <div class="container-md">
-        This is a BS class with medium container.
-    </div><br>
-    <!-- container-large -->
-    <div class="container-lg">
-        This a BS class with large container.
-    </div><br>
-    <!-- container-xl -->
-    <div class="container-xl">
-        This is a BS class with container XL
-    </div><br>
-    <!-- container-xxl -->
-    <div class="container-xxl">
-        This is a BS class with container xxl.
-    </div><hr>
+            <div class="container" >
+                Welcome to bootstrap!
+            </div><br>
+            <!-- container-fluid -->
+            <div class="container-fluid">
+                <p>Today we gonna learn about bootstarp classes.</p>
+            </div><br>
+            <!-- container-small -->
+            <div class="container-sm">
+                This is a bootstrap class with a small container.
+            </div><br>
+            <!-- container-medium -->
+            <div class="container-md">
+                This is a BS class with medium container.
+            </div><br>
+            <!-- container-large -->
+            <div class="container-lg">
+                This a BS class with large container.
+            </div><br>
+            <!-- container-xl -->
+            <div class="container-xl">
+                This is a BS class with container XL
+            </div><br>
+            <!-- container-xxl -->
+            <div class="container-xxl">
+                This is a BS class with container xxl.
+            </div><hr>
 
-<!-- TEXT COLORS IN BS! -->
-<h1>BS Text colors..!</h1><br>
+            <!-- TEXT COLORS IN BS! -->
+            <h1>BS Text colors..!</h1><br>
 
-<div class="text-primary">
-    This is a primary text.
-</div>
-<div class="text-success">
-    This is a success text.
-</div>
-<div class="text-warning">
-    This is a warning text.
-</div>
-<div class="text-danger">
-    This is a danger text.
-</div>
-<div class="text-info">
-    This is a info text.
-</div>
-<div class="text-muted">
-    This is a muted text.
-</div><hr>
+            <div class="text-primary">
+                This is a primary text.
+            </div>
+            <div class="text-success">
+                This is a success text.
+            </div>
+            <div class="text-warning">
+                This is a warning text.
+            </div>
+            <div class="text-danger">
+                This is a danger text.
+            </div>
+            <div class="text-info">
+                This is a info text.
+            </div>
+            <div class="text-muted">
+                This is a muted text.
+            </div><hr>
 
-<!-- BS BG COLORS -->
-<h1>BS Backgorund colors..!</h1><br>
-<div class="bg-primary">
-    Primary represents an important text.
-</div><br>
-<div class="bg-info">
-    Info represents some information.
-</div><br>
-<div class="bg-success">
-    This indicates success.
-</div><br>
-<div class="bg-danger">
-    This indicates danger.
-</div><br>
-<div class="bg-warning">
-    This is a warning.
-</div><br>
-<div class="bg-muted">
-    This is a muted background.
-</div><hr>
-<!-- BS Grids -->
-<!-- col-sm-6 -->
-<h1>BS Grids..!</h1><hr>
-<div class="row">
-    <div class="col-sm-6">column-1 <br>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa animi repellat voluptate inventore dolor est ullam tenetur facere nesciunt, iusto corporis nobis eaque culpa minus eveniet odit veniam obcaecati nemo.</p>
-    </div>
-    <div class="col-sm-6">column-2 <br>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa animi repellat voluptate inventore dolor est ullam tenetur facere nesciunt, iusto corporis nobis eaque culpa minus eveniet odit veniam obcaecati nemo.</p>
-    </div>
-</div><hr>
-<!-- create col-sm-4(12) -->
-<div class="row">
-    <div class="col-sm-4">column number 1 <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, recusandae eveniet eos nesciunt asperiores enim assumenda porro doloremque ipsum fugit neque obcaecati alias, hic laudantium, et vitae? Molestias, architecto nesciunt!</p> </div>
-    <div class="col-sm-4">column number 1 <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, recusandae eveniet eos nesciunt asperiores enim assumenda porro doloremque ipsum fugit neque obcaecati alias, hic laudantium, et vitae? Molestias, architecto nesciunt!</p> </div>
-    <div class="col-sm-4">column number 1 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, recusandae eveniet eos nesciunt asperiores enim assumenda porro doloremque ipsum fugit neque obcaecati alias, hic laudantium, et vitae? Molestias, architecto nesciunt!</p> </div>
-   
-</div><hr>
+            <!-- BS BG COLORS -->
+            <h1>BS Backgorund colors..!</h1><br>
+            <div class="bg-primary">
+                Primary represents an important text.
+            </div><br>
+            <div class="bg-info">
+                Info represents some information.
+            </div><br>
+            <div class="bg-success">
+                This indicates success.
+            </div><br>
+            <div class="bg-danger">
+                This indicates danger.
+            </div><br>
+            <div class="bg-warning">
+                This is a warning.
+            </div><br>
+            <div class="bg-muted">
+                This is a muted background.
+            </div><hr>
+            <!-- BS Grids -->
+            <!-- col-sm-6 -->
+            <h1>BS Grids..!</h1><hr>
+            <div class="row">
+                <div class="col-sm-6">column-1 <br>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa animi repellat voluptate inventore dolor est ullam tenetur facere nesciunt, iusto corporis nobis eaque culpa minus eveniet odit veniam obcaecati nemo.</p>
+                </div>
+                <div class="col-sm-6">column-2 <br>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa animi repellat voluptate inventore dolor est ullam tenetur facere nesciunt, iusto corporis nobis eaque culpa minus eveniet odit veniam obcaecati nemo.</p>
+                </div>
+            </div><hr>
+            <!-- create col-sm-4(12) -->
+            <div class="row">
+                <div class="col-sm-4">column number 1 <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, recusandae eveniet eos nesciunt asperiores enim assumenda porro doloremque ipsum fugit neque obcaecati alias, hic laudantium, et vitae? Molestias, architecto nesciunt!</p> </div>
+                <div class="col-sm-4">column number 1 <br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, recusandae eveniet eos nesciunt asperiores enim assumenda porro doloremque ipsum fugit neque obcaecati alias, hic laudantium, et vitae? Molestias, architecto nesciunt!</p> </div>
+                <div class="col-sm-4">column number 1 <br>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, recusandae eveniet eos nesciunt asperiores enim assumenda porro doloremque ipsum fugit neque obcaecati alias, hic laudantium, et vitae? Molestias, architecto nesciunt!</p> </div>
+            
+            </div><hr>
 
-    <!-- col-sm-3 -->
-    <div class="row">
-        <div class="col-sm-3">coloumn-1 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
-        </div>
-        <div class="col-sm-3">coloumn-2 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
-        </div>
-        <div class="col-sm-3">coloumn-3 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
-        </div>
-        <div class="col-sm-3">coloumn-4 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
-        </div>
-    </div><hr>
-    <!-- unequal grids -->
-    <div class="row">
-        <div class="col-sm-4">column -1 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae praesentium illum incidunt delectus a dolorem officiis expedita id eius, vel doloribus vitae similique! Illum mollitia quam fugit enim vero eveniet.</p></div>
-        <div class="col-8"> coloumn- 2 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam minima libero exercitationem id et illum, tenetur deleniti velit alias excepturi culpa! Sed ipsa iure quisquam dignissimos sint! Enim, pariatur iste!</p></div>
-    </div>
-</div>
+            <!-- col-sm-3 -->
+            <div class="row">
+                    <div class="col-sm-3">coloumn-1 
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
+                    </div>
+                    <div class="col-sm-3">coloumn-2 
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
+                    </div>
+                    <div class="col-sm-3">coloumn-3 
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
+                    </div>
+                    <div class="col-sm-3">coloumn-4 
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi fugit tenetur totam labore nulla expedita voluptas repudiandae placeat non! Illo exercitationem non repudiandae molestias maiores ratione velit nihil quia debitis?</p>
+                    </div>
+            </div><hr>
+                <!-- unequal grids -->
+                <div class="row">
+                    <div class="col-sm-4">column -1 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae praesentium illum incidunt delectus a dolorem officiis expedita id eius, vel doloribus vitae similique! Illum mollitia quam fugit enim vero eveniet.</p></div>
+                    <div class="col-8"> coloumn- 2 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam minima libero exercitationem id et illum, tenetur deleniti velit alias excepturi culpa! Sed ipsa iure quisquam dignissimos sint! Enim, pariatur iste!</p></div>
+                </div>
+            </div><hr>
+
+            <!-- SETTING ONE COLOUMN WIDTH -->
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae sunt atque amet hic, quisquam saepe dolores exercitationem quibusdam mollitia eum officia sint eos numquam magni tenetur maiores, tempora veritatis! Delectus.</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptates cumque accusamus ratione. Quae, nulla aperiam et, tenetur dolores incidunt cum, repellendus asperiores non ab eveniet optio reprehenderit voluptatem. Inventore aliquam explicabo ea, aperiam sunt porro possimus laboriosam perferendis quisquam.</p>
+                    </div>
+                    <div class="col">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae sunt atque amet hic, quisquam saepe dolores exercitationem quibusdam mollitia eum officia sint eos numquam magni tenetur maiores, tempora veritatis! Delectus.</p>
+                    </div>
+                </div>
+            </div><hr>
+            <!-- ROW COLOUMNS -->
+            <div class="row row-col-5">
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid omnis, voluptate similique dolorum minus adipisci provident animi doloremque soluta quod!</p>
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid omnis, voluptate similique dolorum minus adipisci provident animi doloremque soluta quod!</p>
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid omnis, voluptate similique dolorum minus adipisci provident animi doloremque soluta quod!</p>
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid omnis, voluptate similique dolorum minus adipisci provident animi doloremque soluta quod!</p>
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid omnis, voluptate similique dolorum minus adipisci provident animi doloremque soluta quod!</p>
+                </div>
+            </div><hr>
+
+            <!-- ROW COL AUTO -->
+            <div class="container">
+                <div class="row row-col-auto">
+                    <div class="col">coloumn-1</div>
+                    <div class="col">coloumn-2</div>
+                    <div class="col">coloumn-3</div>
+                    <div class="col">coloumn-4</div>
+                    <div class="col">coloumn-5</div>
+                </div>
+            </div>
+
+            <!-- GRIDS -->
+            <h1>BS Grids..!</h1>
+            <div class="grid">
+                <div class="g-col-4">grid-1</div>
+                <div class="g-col-4">grid-1</div>
+                <div class="g-col-4">grid-1</div>
+            </div>
+            <hr>
+            <!-- TEXT ALIGNMENTS -->
+            <h1>Text Alignments..!</h1> <br>
+            <div class="text-left">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus maxime eos itaque praesentium cupiditate aperiam numquam velit unde beatae et soluta delectus animi sit, odit aut impedit rem officiis earum!</p><hr>
+            </div>
+            <div class="text-center">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus dignissimos itaque ad voluptatum, obcaecati temporibus nemo accusantium inventore sunt reprehenderit eum velit voluptatibus vero doloremque perferendis id culpa laudantium harum!</p><hr>
+            </div>
+            <div class="text-right">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet repudiandae ut nihil repellat nobis assumenda magnam illum unde ullam, eum doloremque, quis a aspernatur exercitationem, nesciunt rem repellendus recusandae deserunt!</p><hr>
+            </div>
+
+            <!-- BUTTONS STYLES-->
+            <h1>Button Styles..!</h1>
+            <button class="btn btn-default">Defualt button</button><br><br>
+            <button class=" btn btn-success">Success Button</button><br><br>
+            <button class=" btn btn-primary">PrimaryButton</button><br><br>
+            <button class=" btn btn-warning">Warning Button</button><br><br>
+            <button class=" btn btn-danger">Danger Button</button><br><br>
+            <button class=" btn btn-info">Info Button</button><br><br>
+            <button class=" btn btn-link">Link Button</button><br><br>
+            <button class="btn btn-check btn-success">check button</button>
+            <hr>
+            <!-- Button Sizes -->
+            <h1>BS Button Sizes..!</h1><hr>
+            <button class="btn btn-primary">Normal button</button><br><br>
+            <button class="btn btn-xs btn-primary">extra-small button</button><br><br>
+            <button class="btn btn-sm btn-primary">small button</button><br><br>
+            <button class="btn btn-lg btn-primary">large button</button><br><br><hr>
+
+            <!-- BUTTON GROUPS -->
+            <h1>BS Button Groups..!</h1> <hr><br>
+            <div class="btn-group">
+               <button class="btn btn-warning">Button-1</button>
+               <button class="btn btn-info">Button-1</button>
+               <button class="btn btn-danger">Button-1</button>
+               <button class="btn btn-primary">Button-1</button>
+               <button class="btn btn-dark">Button-1</button>
+               <button class="btn btn-light">Button-1</button>
+               <button class="btn btn-outline-secondary">Button-1</button> 
+            </div> <br><br><hr>
+            <!-- TABLES -->
+            <h1>BS Tables..!</h1>
+            <table  class="table table-striped table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th>S.No</th>
+                        <th>Name</th>
+                        <th>Branch</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>John</td>
+                        <td>CSE</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Harry</td>
+                        <td>ECE</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Jerry</td>
+                        <td>MECH</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Mary</td>
+                        <td>CSE</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Eden</td>
+                        <td>EEE</td>
+                    </tr>
+                </tbody>
+            </table>
+
+           
 </body>
 </html>
